--- a/css/index.css
+++ b/css/index.css
@@ -79,13 +79,20 @@ body {
     border-bottom: 35px solid white;
 }
 .links {
+	height:60px;
 	display:flex;
 	align-content: center;
 	justify-content: space-between;
 	align-items: center;
 	width: 70%;
 }
+header {
+	height:90px;
+	border-bottom: 25px solid white;
+
+}
 .links a {
+	
 	color: grey;
 	text-decoration: none;
 }
@@ -158,10 +165,13 @@ footer {
 	font-size: 33px;
 }
 .first {
-	font-size: 18px;
-	height: 160px;
+	font-size: 100%;
+	height: 70%;
 	border-top:25px solid white;
 	border-bottom:1px solid black;
+}
+.first p {
+	border-bottom:25px solid white;
 }
 .second {
 	flex-flow:row wrap;
@@ -170,10 +180,10 @@ footer {
 	justify-content: space-between;
 }
 .second div {
-	line-height: 1.3;
-	font-size: 20px;
-	height: 300px;
-	width: 580px;
+	line-height: 1.1;
+	font-size: 100%;
+	height: 25%;
+	width: 48%;
 	margin-bottom: 30px;
 	margin-top: 30px;
 	background-color: lightgrey;
@@ -181,8 +191,10 @@ footer {
 	padding: 35px;
 }	
 .button {
-	width: 150px;
-	height: 40px;
+	width: 160px;
+	height: 60px;
+	border: 1px solid black;
+	border-radius: 25px;
 }
 #container h2 {
 	font-size: 26px;
@@ -206,29 +218,41 @@ footer {
 /* Media tags here */
 @media (max-width: 800px){
     header {
+		height: 30%;
         display:flex;
         flex-direction: column;
-        align-items: center;
+		align-items: center;
+		
     }
     .links {
-        width:100%;
+		width:100%;
+	
     }
     .round {
         display:none;
-    }
+	}
+	.second div {
+		font-size: 80%;
+
+	}
 }
 @media (max-width: 500px){
+	header {
+		height:45%;
+	}
     .links {
+		height:120px;
         display:flex;
-        flex-direction: column;
-        align-items: center;
+		flex-direction: column;
+		justify-content: space-between;
+        align-items: space-around;
         border-bottom:1px solid grey;
     }
     .links a {
         display:flex;
         justify-content: center;
-        align-items: center;
-        width:100%;
+        align-items: space-between;
+        width:140%;
         height: 35px;
         border-top:1px solid grey;
     }
@@ -242,5 +266,12 @@ footer {
 	}
 	.bottom div {
 		width:100%;
+	}
+	.second {
+		width:100%;
+		display:flex;
+		flex-direction: column;
+		justify-content: center;
+		align-content: center;
 	}
 }
